syntax= "proto3";

package proto;
import "LoginRequest.proto";
import "LoginResponse.proto";
import "RegisterRequest.proto";
import "RegisterResponse.proto";

option java_package = "generatedClasses";


service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
}





