syntax= "proto3";

package proto;
option java_package = "generatedClasses";



message LoginResponse {
  string token = 1;
}
